syntax = "proto3";

service RandomService {
    rpc GetRandomNumber(RandomRequest) returns (RandomResponse);
    rpc GetRandomObject(RandomRequest) returns (RandomObjectResponse);
}

message RandomRequest {
    int32 min = 1;
    int32 max = 2;
}

message RandomResponse {
    int32 number = 1;
}

message CustomObject {
    bool success = 1;
    string message = 2;
}

message RandomObjectResponse {
    CustomObject object = 1;
}